auth integration apis

--- a/src/app/app.config.json
+++ b/src/app/app.config.json
@@ -2,5 +2,6 @@
     "ENCRYPT_URL": "account/v1/private/encrypt",
     "DECRYPT_URL": "account/v1/private/decypt",
     "SIGN_UP_URL": "account/v1/sign-up",
-    "LOGIN_URL": "auth"
+    "LOGIN_URL": "auth",
+    "RESET_PASSWORD_URL": "/v1/public/forgot-password"
 }
