--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "node ./node_modules/@angular/cli/bin/ng build --configuration=production --output-path=dist/browser --base-href /cuttle/",
+    "build": "node ./node_modules/@angular/cli/bin/ng build --configuration=production --output-path=dist/browser --base-href /cuttle-app/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
