--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "express": "^4.21.1",
     "jquery": "^3.7.1",
     "ngx-bootstrap": "^18.1.3",
+    "ngx-loading": "^17.0.0",
+    "ngx-ui-loader": "^13.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "serverless-http": "^3.2.0",
