--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@sumsub/websdk": "^2.3.11",
     "angular-device-information": "^4.0.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
