--- a/src/app/app.config.json
+++ b/src/app/app.config.json
@@ -5,11 +5,14 @@
     "LOGIN_URL": "auth",
     "RESET_PASSWORD_URL": "account/v1/public/forgot-password",
     "SEND_OTP_URL": "account/v1/public/send-otp",
-    "LOGIN_VERIFY_OTP_URL": "account/v1/public/verify",
+    "VERIFY_OTP_URL": "account/v1/public/verify",
     "CREDIT_BALANCE_URL": "account/v1/get-credit-balance",
     "GET_PROFILE_DATA_URL": "account/v1/profile-data",
     "LOCK_CARD_URL": "account/v1/lock-card",
     "UNLOCK_CARD_URL": "account/v1/unlock-card",
     "GET_CARD_SENSITIVE_INFO_URL": "account/v1/get-cards-senstive-info",
-    "GET_CARD_LISTS": "account/v1/get-cards-list"
+    "GET_CARD_LISTS": "account/v1/get-cards-list",
+    "GET_ACCESS_TOKEN_URL": "smsb/v2/access-token/cuttle_test",
+    "POST_KYC_URL": "account/v1/post-kyc/individual",
+    "ACTIVATE_CARD_URL": "account/v1/activate-card"
 }
