--- a/src/app/app.config.json
+++ b/src/app/app.config.json
@@ -14,5 +14,8 @@
     "GET_CARD_LISTS": "account/v1/get-cards-list",
     "GET_ACCESS_TOKEN_URL": "smsb/v2/access-token/cuttle_test",
     "POST_KYC_URL": "account/v1/post-kyc/individual",
-    "ACTIVATE_CARD_URL": "account/v1/activate-card"
+    "ACTIVATE_CARD_URL": "account/v1/activate-card",
+    "GET_WALLETS_URL": "account/v1/wallets",
+    "GET_WALLET_BALANCE_URL": "account/v1/total-portfolio/balance",
+    "GET_COUNTRIES_URL": "account/v2/public/supported_countries"
 }
