--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@popperjs/core": "^2.11.8",
     "@sumsub/websdk": "^2.3.11",
     "angular-device-information": "^4.0.0",
+    "angularx-qrcode": "^17.0.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "file-saver": "^2.0.5",
     "jquery": "^3.7.1",
+    "jwt-decode": "^4.0.0",
     "ngx-bootstrap": "^18.1.3",
     "ngx-loading": "^17.0.0",
     "ngx-ui-loader": "^13.0.0",
@@ -42,6 +45,7 @@
     "@angular-devkit/build-angular": "^17.3.11",
     "@angular/cli": "^17.3.11",
     "@angular/compiler-cli": "^17.3.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
