--- a/angular.json
+++ b/angular.json
@@ -61,6 +61,27 @@
               ],
               "outputHashing": "all"
             },
+            "stage": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.stage.ts"
+                }
+              ],
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "8kb"
+                }
+              ],
+              "outputHashing": "all"
+            },
             "development": {
               "optimization": false,
               "extractLicenses": false,
@@ -78,6 +99,9 @@
           "configurations": {
             "production": {
               "buildTarget": "cuttle-app:build:production"
+            },
+            "stage": {
+              "buildTarget": "cuttle-app:build:stage"
             },
             "development": {
               "buildTarget": "cuttle-app:build:development"
